--- a/src/app/modules/listar-servicos/listar-servicos.component.html
+++ b/src/app/modules/listar-servicos/listar-servicos.component.html
@@ -1,17 +1,18 @@
-<table >
-  <tr>
-    <th>id</th>
-    <th>data</th>
-    <th>nome do serviço</th>
-    <th>nome da cliente</th>
-    <th>valor</th>
+<table class="container">
+  <tr class="titulo">
+    <th>Id</th>
+    <th>Data</th>
+    <th>Nome do Serviço</th>
+    <th>Nome da Cliente</th>
+    <th>Valor</th>
+    <th>Ações</th>
   </tr>
-  <tr *ngFor="let item of lista">
-    <td>{{item.id}}</td>
-    <td>{{item.dataDoServico}}</td>
-    <td>{{item.nomeDoServico}}</td>
-    <td>{{item.nomeCliente}}</td>
-    <td>{{item.valor}}</td>
+  <tr *ngFor="let item of lista" class="linhas">
+    <td class="linhas">{{item.id}}</td>
+    <td class="linhas">{{item.dataDoServico |date: "dd/MM/yyyy"}}</td>
+    <td class="linhas">{{item.nomeDoServico}}</td>
+    <td class="linhas">{{item.nomeCliente}}</td>
+    <td class="linhas">{{item.valor | currency : "BRL"}}</td>
   </tr>
   
 </table>
